# cnc_v1_scenario

./: .gitignore  README.md  check-env.sh  llm.txt  llm_be.md  llm_fe.md  start.sh  stop.sh
backend/: cnc_optimizer.db  env.example  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  config.py  files.py  optimization.py  projects.py  scenarios.py  simulations.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  optimization.py  project.py  scenario.py  simulation.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py
backend/models/: auth.py  chat.py  config.py  files.py  optimization.py  projects.py  scenarios.py  simulations.py
backend/routers/: auth.py  chat.py  config.py  files.py  optimization.py  projects.py  scenarios.py  simulations.py
backend/services/: auth_service.py  chat_service.py  config_service.py  files_service.py  optimization_service.py  projects_service.py  scenarios_service.py  simulations_service.py
cnc/: clean_after_cythonize.py  cython_modules.yaml  cythonize_confidential.sh  setup.py
cnc/auth/: auth_template.py  gen_auth.sh  save_password.py
cnc/conf/: auth_users.yaml  data_path.yaml  v1_config.yaml  v1_ml.yaml
cnc/demo_ui/: ASYNC_OPTIMIZATION_README.md  app.py  async_optimization_example.py  code_diff_view.py  conf_init.py  login.py  (+11 more)
frontend/: README.md  app.vue  index.html  package-lock.json  package.json  start.sh  tailwind.config.js
sample/: config_run_sample.json
(+136 files in other folders)
